<resources>
    <string name="app_name">password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btn_submit">Submit</string>
    <string name="email_hint">Enter Email</string>
    <string name="user_name_hint">Enter first + last name</string>
    <string name="pass_hint">Enter pasword</string>
    <string name="repass_hint">Re-enter pasword</string>
    <string name="title_activity_registration">Registration</string>

</resources>
